2008-01-13  Stefan Jahn  <stefan@lkcc.org>

	* real.cpp: Reverted abs() -> fabs() renaming.

2008-01-12  Stefan Jahn  <stefan@lkcc.org>

	* real.cpp: Put real valued functions from complex file here.
	Also renamed abs() function (of complex, vector, matrix) to
	fabs() everywhere.

2008-01-10  Stefan Jahn  <stefan@lkcc.org>

	* Makefile.am: Creating math library.  Complex class has been
	renamed.  Now able to use also <complex> and <tr1/complex>.
	Thanks a lot to Bastien.  Renamed complex to nr_complex_t
	everywhere.

	* ChangeLog: Created this file.