@@ -1,5 +1,8 @@
 2008-01-13  Stefan Jahn  <stefan@lkcc.org>
 
+	* complex.h: Using std namespace; now using <complex/tr1> works
+	somehow.
+
 	* real.cpp: Reverted abs() -> fabs() renaming.
 
 2008-01-12  Stefan Jahn  <stefan@lkcc.org>
